<resources>
    <string name="app_name">Karad Taluka Seva App</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="login">Login</string>

    <!--Navigation drawer items-->
    <string name="send_otp">Send OTP</string>


    <string name="action_settings">Settings</string>

    <string name="confirm_order">Confirm Order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_your_peth">Choose Your Peth</string>
    <string name="go">Go</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="medicine">Medicine,</string>
    <string name="karad">Karad</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="headmainimage">HeadMainImage</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="change_category">Change Category</string>
    <string name="head">Head</string>
    <string name="registration">Registration</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="your_address_of_delivery">Your Address of Delivery</string>
    <string name="register">Register</string>
    <string name="grocery">Grocery,</string>
    <string name="karad">Karad</string>
    <string name="kirana_shop">Kirana Shop</string>
    <string name="medical_shop">Medical Shop</string>
    <string name="vegitables">Vegitables</string>
    <string name="hotel_parsel">Hotel Parsel</string>
    <string name="hello">Hello,</string>
    <string name="karad">Karad</string>
    <string name="bheda_chowk_shaniwar_peth_karad">Bheda Chowk,Shaniwar peth, Karad</string>
    <string name="bheda_chowk_shaniwar_peth_karad">Bheda Chowk,Shaniwar peth, Karad</string>
    <string name="send_photo">Send Photo</string>
    <string name="send_message">Send Message</string>
    <string name="call_shop">Call Shop</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact</string>
    <string name="_100">100%</string>
    <string name="bheda_chowk_shaniwar_peth_karad">Bheda Chowk,Shaniwar peth, Karad</string>
    <string name="hello_world_this_is_mulla_from_mars">Hello World This is Mulla From MArs</string>

    <array name="peths">
        <item>Select Your Area</item>
        <item>Shaniwar Peth 1</item>
        <item>Shaniwar Peth 2</item>
        <item>Raviwar Peth</item>
        <item>Somwar Peth</item>
        <item>Mangalwar Peth</item>
        <item>Budhuwar Peth</item>
        <item>Guruwar Peth</item>
        <item>Retaray</item>
        <item>Vidyanagar</item>
        <item>Undale</item>
        <item>Oglewadi</item>
        <item>Malkapur</item>
        <item>AgashivNagar</item>
        <item>Masur</item>
        <item>Umbraj</item>


    </array>
</resources>
