<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comm.mrspdd.lockdownsevaapp.Ui.Activities.ShopChatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/tvShopImage1"
            android:layout_width="80dp"
            android:layout_height="76dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvShopName1"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:fontFamily="@font/productbold"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/tvShopAddress1"
            app:layout_constraintEnd_toEndOf="@+id/tvShopAddress1"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="@+id/tvShopAddress1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:text="Airtel Kirana Store" />

        <TextView
            android:id="@+id/tvShopAddress1"
            android:layout_width="193dp"
            android:layout_height="58dp"
            android:layout_marginStart="40dp"
            android:text="@string/bheda_chowk_shaniwar_peth_karad"
            android:textColor="#444"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvShopImage1"
            app:layout_constraintStart_toEndOf="@+id/tvShopImage1"
            app:layout_constraintTop_toTopOf="@+id/tvShopImage1"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/undershopnamedivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShopAddress1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvaddphoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productbold"
                    android:onClick="addPhoto"
                    android:text="@string/send_photo"
                    android:textColor="#000"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnCamera"
                    app:layout_constraintEnd_toStartOf="@+id/btnCamera"
                    app:layout_constraintTop_toTopOf="@+id/btnCamera"
                    app:layout_constraintVertical_bias="0.489" />

                <TextView
                    android:id="@+id/tvmessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productbold"
                    android:onClick="addmessage"
                    android:text="@string/send_message"
                    android:textColor="#000"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/order_send_button"
                    app:layout_constraintEnd_toStartOf="@+id/btnCamera"
                    app:layout_constraintTop_toTopOf="@+id/order_send_button" />

                <TextView
                    android:id="@+id/tvaddphoto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/productbold"
                    android:onClick="CallShop"
                    android:text="@string/call_shop"
                    android:textColor="#000"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/CallButton"
                    app:layout_constraintEnd_toStartOf="@+id/CallButton"
                    app:layout_constraintTop_toTopOf="@+id/CallButton" />

                <ImageView
                    android:id="@+id/btnCamera"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/camera"
                    android:src="@drawable/cameraicon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/order_send_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/sendicon"
                    android:fontFamily="@font/productbold"
                    android:onClick="addmessage"
                    android:text="@string/contact"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="@+id/btnCamera"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvaddphoto"
                    app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

                <ImageView
                    android:id="@+id/CallButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:onClick="CallShop"
                    android:background="@drawable/dialerlogo"
                    app:layout_constraintEnd_toEndOf="@+id/order_send_button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/order_send_button"
                    app:layout_constraintTop_toBottomOf="@+id/order_send_button" />

                <TextView
                    android:id="@+id/tvProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/_100"
                    android:visibility="invisible"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/progressbar"
                    app:layout_constraintEnd_toEndOf="@+id/progressbar"
                    app:layout_constraintStart_toStartOf="@+id/progressbar" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="64dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/CallButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>