<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="comm.mrspdd.lockdownsevaapp.Ui.Activities.RegisterFormActivity">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/productlight"
        android:text="@string/registration"
        android:textColor="#323232"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="327dp"
        android:layout_height="199dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/registration_illu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/xyz"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="10dp"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/highlight"
        app:neomorph_shadow_color="@color/shadowcolor"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:mtf_cardCollapsedHeight="1dp"
            app:mtf_labelColor="#323232">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productlight"
                android:hint="@string/enter_your_name"
                android:textColor="@color/dark"
                android:autofillHints=""
                android:inputType="text" />
        </com.github.florent37.materialtextfield.MaterialTextField>
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/xyz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xyz"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="10dp"
        app:neomorph_elevation="6dp"
        android:layout_marginTop="20dp"
        app:neomorph_highlight_color="@color/highlight"
        app:neomorph_shadow_color="@color/shadowcolor"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/materialTextField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:mtf_cardCollapsedHeight="1dp"
            app:mtf_labelColor="@color/dark">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productlight"
                android:hint="@string/your_address_of_delivery"
                android:inputType="textLongMessage"
                android:textColor="@color/dark"
                tools:ignore="Autofill" />

        </com.github.florent37.materialtextfield.MaterialTextField>
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xyz1"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="10dp"
        app:neomorph_elevation="6dp"
        android:layout_marginTop="20dp"
        app:neomorph_highlight_color="@color/highlight"
        app:neomorph_shadow_color="@color/shadowcolor"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular">

        <Button
            android:id="@+id/login_button"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/productbold"
            android:onClick="GotoMainActivity"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="18sp" />
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

