<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="comm.mrspdd.lockdownsevaapp.Ui.Activities.LoginFormActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/productlight"
        android:text="@string/login"

        android:textColor="#323232"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="238dp"
        android:layout_height="238dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/login_illustri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="ContentDescription" />



    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/xyz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="10dp"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/highlight"
        app:neomorph_shadow_color="@color/shadowcolor"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular">

        <EditText
            android:id="@+id/OTPentered"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/snap_rectangle"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#323232" />


    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>

    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xyz"
        app:neomorph_background_color="@color/background"
        app:neomorph_corner_radius="10dp"
        app:neomorph_elevation="6dp"
        app:neomorph_highlight_color="@color/highlight"
        app:neomorph_shadow_color="@color/shadowcolor"
        app:neomorph_shadow_type="outer"
        app:neomorph_view_type="rectangular">

        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/productbold"
            android:onClick="LoginByOTP"
            android:text="@string/send_otp"
            android:textColor="#fff"
            android:textSize="18sp" />
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>